scode/YaRM/prob15/error.txt
  File "main.py", line 4
    def fct ():
    ^
IndentationError: expected an indented block
